--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ API_PORT=8000
 ML_PORT=8001
 FRONTEND_PORT=3000
 BLOCKCHAIN_AUDIT=true
+WORKER_TICK_MS=15000
+AUTO_DRAFT_THRESHOLD=45
+AUTO_ACTION_COOLDOWN_HOURS=6
+AUTO_IGNORE_HOURS=24
